2016.12.29 ver2.8.6 - Changed catalog matching criteria SIMBAD into
	              "region(box,..." style.
	            - Parameter setups for SIMBAD catalog matching.

2016.12.27 ver2.8.5 - Added proper motion info for standard and finding chart
	              objects.
	            - Added OPE Def. button in finding chart object list.
	            - Added "copy to clipboard for OPE Def. button in standard
	              and finding chart object lists.
	            - These OPE Def. coordinates automatically calculate proper
	              motion of targets (for targets w/PM_RA or Dec > 50mas/yr).
	            - Added iteration at the beginning of fc_dl_draw(),
	              fcdb_dl(), and stdb_dl().
	            - Added gdk_flush() to each iteration.

2016.12.26 ver2.8.4 - small bug fix.

2016.12.26 ver2.8.3 - Added iteration at the beginning of draw_fc_cairo();

2016.12.26 ver2.8.2 - Added SIMBAD catalog matching in finding chart .
	            - Standard and Object in FC tree windows are unified
	              into the main object treeview (using tab).
	            - Refined remake_tree in object treeview.

2016.12.23 ver2.8.1 - For Standard search mode added
	                 - ESO Opt/UV standard
	                 - IRAF onedstds (spec16/50cal)
	                 - HST CALSPEC
	            - These standard list are stocked in esostd.h
	              See std_data/README how to make the lists.
	            - HSC dead chips are added in the FC drawing.

2016.12.22 ver2.8.0 - Added Standard search mode (SIMBAD via VOTABLE).
	              Imported votable.c/.h from libVOTable-0.1e

2016.12.20 ver2.7.8 - Object number display in Object List is changed into
	                  "X-YY" X=OPE number,  YY=Obj. number in OPE
	            - Bug fix on MergeListPRM.

2016.02.23 ver2.7.7 - Added "Def in OPE" in the treeview of Obj. List.
	              (Default is OFF; So, please turn ON in Profiles window.)

2015.06.22 ver2.7.6 - Switch SDSS web access from DR10 to DR12.